[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Principal" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -54.0
margin_right = 98.5
margin_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="Principal"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -22.0
margin_right = -5.0
margin_bottom = 22.0

[node name="Servidor" type="Button" parent="Principal/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0
text = "Servidor"

[node name="Cliente" type="Button" parent="Principal/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0
text = "Cliente"

[node name="Cliente" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -127.0
margin_right = 107.5
margin_bottom = 127.0

[node name="Label" type="Label" parent="Cliente"]
margin_top = 14.0
margin_right = 214.0
margin_bottom = 55.0
text = "Digite dois números
para realizar o MMC"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Cliente"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -36.0
margin_right = 98.5
margin_bottom = 36.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Cliente/VBoxContainer"]
margin_right = 197.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Cliente/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "1.º Número"
align = 1

[node name="Label2" type="Label" parent="Cliente/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 197.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "2.º Número"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Cliente/VBoxContainer"]
margin_top = 18.0
margin_right = 197.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Cliente/VBoxContainer/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TextEdit2" type="TextEdit" parent="Cliente/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 197.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Enviar" type="Button" parent="Cliente/VBoxContainer"]
margin_top = 52.0
margin_right = 197.0
margin_bottom = 72.0
text = "Enviar"

[node name="VBoxContainer2" type="VBoxContainer" parent="Cliente"]
margin_top = 198.0
margin_right = 195.0
margin_bottom = 252.0

[node name="Label2" type="Label" parent="Cliente/VBoxContainer2"]
margin_right = 195.0
margin_bottom = 14.0
text = "Resultado do MMC:"
align = 1

[node name="Resultado" type="Label" parent="Cliente/VBoxContainer2"]
margin_top = 18.0
margin_right = 195.0
margin_bottom = 32.0
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Cliente/VBoxContainer2"]
margin_top = 36.0
margin_right = 195.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Cliente/VBoxContainer2/HBoxContainer2"]
margin_right = 95.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Tempo:"
align = 1

[node name="Tempo" type="Label" parent="Cliente/VBoxContainer2/HBoxContainer2"]
margin_left = 99.0
margin_right = 195.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 1

[node name="Servidor" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -142.0
margin_right = 196.0
margin_bottom = 142.0

[node name="VBoxContainer" type="VBoxContainer" parent="Servidor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -7.0
margin_bottom = 3.0

[node name="Label" type="Label" parent="Servidor/VBoxContainer"]
margin_right = 378.0
margin_bottom = 31.0
text = "Clientes
conectados"
align = 1

[node name="ListaClientes" type="ItemList" parent="Servidor/VBoxContainer"]
margin_top = 35.0
margin_right = 378.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 100 )

[node name="Label2" type="Label" parent="Servidor/VBoxContainer"]
margin_top = 139.0
margin_right = 378.0
margin_bottom = 170.0
text = "Solicitações
de Clientes"
align = 1

[node name="Resultados" type="ItemList" parent="Servidor/VBoxContainer"]
margin_top = 174.0
margin_right = 378.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="Principal/VBoxContainer/Servidor" to="." method="_on_Servidor_pressed"]
[connection signal="pressed" from="Principal/VBoxContainer/Cliente" to="." method="_on_Cliente_pressed"]
[connection signal="pressed" from="Cliente/VBoxContainer/Enviar" to="." method="_on_Enviar_pressed"]
